tests/success/types-2.moc
void main() {
    1 + 1 == 2;
    NULL == NULL;
    (1 < 2) && false;
    (1 > 2) || ((1 == 1) && true) || (1 - 1 <= 0);
}
