tests/error/types-3.moc
void main() {
    1 + true;
}
